# messanger

./: CMakeLists.txt  README.md  a.out  client.cpp  client.h  main.cpp  main.qml  qml.qrc  server.cpp  userid.txt
model/: Connection_Client.cpp  Connection_Client.h  Connection_Manager.cpp  Connection_Manager.h  Connection_Server.cpp  Connection_Server.h  File_Handle.cpp  File_Handle.h  Server_Obj.cpp  Server_Obj.h  User.cpp  User.h
protobuf/: gen-proto.sh  message.proto
qml_resources/: Clientbutton.qml  Login.qml  Menu.qml  ServerSearch.qml  ServerSelectButton.qml  SettingMenu.qml
qml_resources/chatwindow_dir/: ChatWindow.qml  Download_button.qml  ImageView.qml  StickerWindow.qml  Textbox.qml  VideoView.qml
